--- a/styles.css
+++ b/styles.css
@@ -258,6 +258,7 @@ button span {
 
 .separadorPie {
     width: 100%;
+    height: 1.5vw;
     margin-bottom: 0px;
     background-color: #222222;
     color: white;
@@ -370,7 +371,7 @@ padding-bottom: .5vw;
 
 }
 
-@media (max-width: 991px) and (min-width: 280px) {
+@media (max-width: 991px) and (min-width: 550px) {
 
     .ingreso {
 
@@ -384,7 +385,7 @@ padding-bottom: .5vw;
     }
     
     .cabecera{
-        height: 11vh;
+        height: auto;
     }
     
     li {
@@ -420,7 +421,7 @@ padding-bottom: .5vw;
     
     .principal {
         
-        height: 90vh;
+        height: 100vh;
     }
     
     .portada {
@@ -467,7 +468,7 @@ padding-bottom: .5vw;
     
     .muestra {
     width: 100%;
-    height: 38vw;
+    height: 32vw;
     margin-bottom: 2vw;
     }
 
@@ -487,9 +488,68 @@ padding-bottom: .5vw;
 
     .muestra2 {
     width: 100%;
-    height: 38vw;
+    height: 32vw;
     margin-bottom: 2vw;
     }
+
+    .separadorPie {
+        height: 3vw;
+    }
+
+    
+.containerPie {
+    height: auto;
+    flex-direction: row;
+    align-items: center;
+    
+}
+
+.pie {
+    width: 50%;
+    height: auto;
+    
+}
+
+.pieFirma {
+    display: flex;
+    justify-content: center;
+align-items: center;
+}
+
+.pie h2 {
+
+    font-size:  7vw;
+    
+}
+
+.pie h3 {
+    font-family:'Roboto', sans-serif; 
+    font-size:  2.5vw;
+    text-transform: uppercase;
+    font-weight: 300;
+    letter-spacing: .2vw;
+    padding-bottom: 1vw;
+}
+
+
+.pie li {
+
+
+ font-weight: 100;
+ letter-spacing: .2vw;
+ width: 100%;
+ text-align: justify;
+ padding-left: 35%;
+ font-size: 2vw;
+
+}
+
+
+.pieInfo {
+    align-items: center;
+    
+    padding-top: 5vw;
+}
 
 
 }
