--- a/styles.css
+++ b/styles.css
@@ -348,14 +348,11 @@ padding-bottom: .5vw;
 @media (max-width: 1100px) and (min-width: 992px) {
 
     .ingreso {
-
         height: 3vw;
     }
-
     .ingreso a {
         font-size: 1.4vw;
     }
-    
     ul {
     width: 100%;
     }
@@ -364,20 +361,15 @@ padding-bottom: .5vw;
     font-size: 1.4vw;
     width: 25%;
     text-align: center;
-    
     }
-
-
 
 }
 
 @media (max-width: 991px) and (min-width: 550px) {
 
     .ingreso {
-
         height: 5vw;
         justify-content: center;
- 
     }
     
     .ingreso a {
@@ -389,15 +381,12 @@ padding-bottom: .5vw;
     }
     
     li {
-    
     font-size: 2.5vw;
     width: 50%;
     text-align: left;
-    
     }
 
     .menuLink {
-    
     text-transform: uppercase;
     background-color: white;
     color: #ff383f;
@@ -410,17 +399,14 @@ padding-bottom: .5vw;
     .macba {
     display: none;
     }
-  
 
-    .separador {
-        
+    .separador {  
         height: 3vw;
         margin-bottom: 0.5vw;
         margin-top: 0.5vw;
     }
     
-    .principal {
-        
+    .principal { 
         height: 100vh;
     }
     
@@ -443,15 +429,12 @@ padding-bottom: .5vw;
     .portada  p {
         width: 70%;
         font-size: 2.8vw; 
-        
     }
     
     .portada button {
-        
         font-size: 2.5vw;
         width: 40%;
-        height: 7vw;
-        
+        height: 7vw; 
     }
     
     .exposiciones {
@@ -462,7 +445,6 @@ padding-bottom: .5vw;
     .textoExposiciones {
         font-size: 4vw;
         font-weight: 300;  
-    
     }
 
     
@@ -476,13 +458,11 @@ padding-bottom: .5vw;
     .muestraFuente h3 {
     width: 95%;
     font-size: 2.7vw;
-
     }
 
     .muestraFuente p {
     width: 80%;
     font-size: 1.8vw;
-
     }
 
 
@@ -496,60 +476,200 @@ padding-bottom: .5vw;
         height: 3vw;
     }
 
-    
-.containerPie {
+    .containerPie {
     height: auto;
     flex-direction: row;
     align-items: center;
-    
-}
+    }
 
-.pie {
+    .pie {
     width: 50%;
     height: auto;
-    
-}
+    margin-bottom: 4vw;
+    }
 
-.pieFirma {
-    display: flex;
-    justify-content: center;
-align-items: center;
-}
-
-.pie h2 {
-
+    .pie h2 {
     font-size:  7vw;
-    
-}
+    }
 
-.pie h3 {
-    font-family:'Roboto', sans-serif; 
+    .pie h3 {
     font-size:  2.5vw;
-    text-transform: uppercase;
-    font-weight: 300;
+    font-weight: 400;
     letter-spacing: .2vw;
     padding-bottom: 1vw;
-}
+    }
 
+    .pie li {
+    letter-spacing: .2vw;
+    width: 100%;
+    text-align: justify;
+    padding-left: 35%;
+    font-size: 2vw;
 
-.pie li {
+    }
 
-
- font-weight: 100;
- letter-spacing: .2vw;
- width: 100%;
- text-align: justify;
- padding-left: 35%;
- font-size: 2vw;
-
-}
-
-
-.pieInfo {
+    .pieInfo {
     align-items: center;
-    
-    padding-top: 5vw;
+    }
+
+    .copyright {
+    font-size: 1.4vw;
+    }
+
 }
 
+@media (max-width: 549px) and (min-width: 200px) {
+
+    .ingreso {
+        height: 8vw;
+        justify-content: center;
+    }
+    
+    .ingreso a {
+        font-size: 4vw;
+    }
+    
+    .cabecera{
+        height: auto;
+    }
+    
+    li {
+    font-size: 4.5vw;
+    width: 70%;
+    text-align: left;
+    }
+
+    .menuLink {
+    text-transform: uppercase;
+    background-color: white;
+    color: #ff383f;
+    padding-left: 5vw;  
+    }
+    .menuLink:hover {
+    background-color: #ff383f;
+    color: white;
+    }
+    .macba {
+    display: none;
+    }
+
+    .separador {  
+        height: 5.5vw;
+        margin-bottom: 0.5vw;
+        margin-top: 0.5vw;
+    }
+    
+    .principal { 
+        height: 85vh;
+    }
+    
+    .portada {
+        width: 100%;
+        background-image: url(museo.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    
+    .fotoMuseo {
+        display: none;
+    }
+    
+    .portada h1 {
+        letter-spacing: 1vw;
+        font-size: 21vw;        
+    }
+    
+    .portada  p {
+        width: 70%;
+        font-size: 5vw; 
+    }
+    
+    .portada button {
+        font-size: 4vw;
+        width: 50%;
+        height: 10vw; 
+    }
+    
+    .exposiciones {
+        
+        margin-top: 3vw;
+        margin-bottom: 12vw;
+    }
+
+    .textoExposiciones {
+        font-size: 7vw;
+        font-weight: 300;  
+    }
+
+    
+    .muestra {
+    width: 100%;
+    height: 38vw;
+    margin-bottom: 2.5vw;
+    }
+
+
+    .muestraFuente h3 {
+    width: 95%;
+    font-size: 4.5vw;
+    margin-bottom: 1.2vw;
+    }
+
+    .muestraFuente p {
+    width: 95%;
+    font-size: 2.6vw;
+    margin-bottom: 0vw;
+    }
+
+
+    .muestra2 {
+    width: 100%;
+    height: 38vw;
+    margin-bottom: 2.5vw;
+    }
+
+    .separadorPie {
+        height: 5.5vw;
+    }
+
+    .containerPie {
+    height: auto;
+    flex-direction: row;
+    align-items: center;
+    }
+
+    .pie {
+    width: 50%;
+    height: auto;
+    margin-bottom: 4vw;
+    }
+
+    .pie h2 {
+    font-size:  9vw;
+    }
+
+    .pie h3 {
+    font-size:  4vw;
+    font-weight: 400;
+    letter-spacing: .2vw;
+    padding-bottom: 1vw;
+    }
+
+    .pie li {
+    letter-spacing: .2vw;
+    width: 100%;
+    text-align: justify;
+    padding-left: 20%;
+    font-size: 3.5vw;
+
+    }
+
+    .pieInfo {
+    align-items: center;
+    }
+
+    .copyright {
+    font-size: 3vw;
+    }
 
 }
