--- a/styles.css
+++ b/styles.css
@@ -607,13 +607,13 @@ padding-bottom: .5vw;
     
     .portada  p {
         width: 70%;
-        font-size: 5vw; 
+        font-size: 5.5vw; 
     }
     
     .portada button {
-        font-size: 4vw;
-        width: 50%;
-        height: 10vw; 
+        font-size: 4.5vw;
+        width: 55%;
+        height: 14vw; 
     }
     
     .exposiciones {
@@ -623,15 +623,15 @@ padding-bottom: .5vw;
     }
 
     .textoExposiciones {
-        font-size: 8vw;
+        font-size: 9vw;
         font-weight: 300;  
         letter-spacing: 0.8vw;
     }
 
     
     .muestra {
-    width: 98%;
-    height: 50vw;
+    width: 100%;
+    height: 70vw;
     margin-bottom: 2.5vw;
     }
 
@@ -648,14 +648,14 @@ padding-bottom: .5vw;
 
     .muestraFuente p {
     width: 95%;
-    font-size: 2.6vw;
+    font-size: 3.5vw;
     margin-bottom: 0vw;
     }
 
 
     .muestra2 {
-    width: 98%;
-    height: 50vw;
+    width: 100%;
+    height: 70vw;
     margin-bottom: 2.5vw;
     }
 
@@ -669,9 +669,10 @@ padding-bottom: .5vw;
     }
 
     .containerPie {
-    height: auto;
+    height: 120vw;
     flex-direction: row;
     align-items: center;
+    padding-bottom: 10vw;
     }
 
     .pie {
@@ -685,7 +686,7 @@ padding-bottom: .5vw;
     }
 
     .pie h3 {
-    font-size:  4vw;
+    font-size:  4.8vw;
     font-weight: 400;
     letter-spacing: .2vw;
     padding-bottom: 1vw;
@@ -695,8 +696,8 @@ padding-bottom: .5vw;
     letter-spacing: .2vw;
     width: 100%;
     text-align: justify;
-    padding-left: 20%;
-    font-size: 3.5vw;
+    padding-left: 17%;
+    font-size: 3.8vw;
 
     }
 
