cambios responsive portada

--- a/styles.css
+++ b/styles.css
@@ -588,7 +588,7 @@ padding-bottom: .5vw;
     }
     
     .principal { 
-        height: auto;
+        height: 140vw;
     }
     
     .portada {
