--- a/usuarios.css
+++ b/usuarios.css
@@ -1,20 +1,35 @@
-.containerFormulario {
+
+.separador {
+    margin-bottom: 4vw;
+}
+.containerUsuarios {
     width: 80%;
     margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
-.containerFormulario h3 {
+
+.login {
+    width: 35%;
+    
+}
+
+
+
+.login h4 {
     text-align: center;
-    margin-top: 2vw;
     font-family: 'Roboto', sans-serif;
-    letter-spacing: .3vw;
-    font-weight: 400;
+    margin-bottom: 1vw;
 }
 
 .formulario {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
+
     
 }
 
@@ -22,12 +37,6 @@
     margin-top: 2vw;
 }
 
-.textoForm:focus {
-    
-    border-color: #f7a9ac;
-    box-shadow: 0px 0px 5px 1px #ff7074;
-    outline: none;
-}
 
 .enviar {
 
@@ -38,12 +47,13 @@
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.1vw;
     border-style: none;
-    width: 30%;
-    height: 4vw;
+    width: 50%;
+    height: 3vw;
     border-radius: 8px;
     display: block;
     margin: 0 auto;
-    margin-top: 2vw;
+    margin-top: 3vw;
+    
     
 }
 
@@ -52,5 +62,5 @@
 }
 
 .separadorPie {
-    margin-top: 4vw;
+    margin-top: 9vw;
 }
